; ModuleID = '/home/carl/AnghaBench/linux/drivers/mfd/extr_atmel-smc.c_atmel_hsmc_get_reg_layout.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mfd/extr_atmel-smc.c_atmel_hsmc_get_reg_layout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.atmel_hsmc_reg_layout = type { i32 }
%struct.device_node = type { i32 }
%struct.of_device_id = type { %struct.atmel_hsmc_reg_layout* }

@atmel_smc_ids = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.atmel_hsmc_reg_layout* @atmel_hsmc_get_reg_layout(%struct.device_node* %0) #0 {
  %2 = alloca %struct.device_node*, align 8
  %3 = alloca %struct.of_device_id*, align 8
  store %struct.device_node* %0, %struct.device_node** %2, align 8
  %4 = load i32, i32* @atmel_smc_ids, align 4
  %5 = load %struct.device_node*, %struct.device_node** %2, align 8
  %6 = call %struct.of_device_id* @of_match_node(i32 %4, %struct.device_node* %5)
  store %struct.of_device_id* %6, %struct.of_device_id** %3, align 8
  %7 = load %struct.of_device_id*, %struct.of_device_id** %3, align 8
  %8 = icmp ne %struct.of_device_id* %7, null
  br i1 %8, label %9, label %13

9:                                                ; preds = %1
  %10 = load %struct.of_device_id*, %struct.of_device_id** %3, align 8
  %11 = getelementptr inbounds %struct.of_device_id, %struct.of_device_id* %10, i32 0, i32 0
  %12 = load %struct.atmel_hsmc_reg_layout*, %struct.atmel_hsmc_reg_layout** %11, align 8
  br label %17

13:                                               ; preds = %1
  %14 = load i32, i32* @EINVAL, align 4
  %15 = sub nsw i32 0, %14
  %16 = call %struct.atmel_hsmc_reg_layout* @ERR_PTR(i32 %15)
  br label %17

17:                                               ; preds = %13, %9
  %18 = phi %struct.atmel_hsmc_reg_layout* [ %12, %9 ], [ %16, %13 ]
  ret %struct.atmel_hsmc_reg_layout* %18
}

declare dso_local %struct.of_device_id* @of_match_node(i32, %struct.device_node*) #1

declare dso_local %struct.atmel_hsmc_reg_layout* @ERR_PTR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
